2025-02-03T01:41:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13104719210 # 797
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
* notice: last 14d: unq all: 12 31
* notice: prev accum: outdated-unq outdated-all / unq all: 951 4973 / 967 5029
* notice: next accum: outdated-unq outdated-all / unq all: 955 4998 / 967 5029
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-19] / []

2025-02-01T01:45:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13083853199 # 793
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-01
* notice: last 14d: unq all: 16 56
* notice: prev accum: outdated-unq outdated-all / unq all: 948 4969 / 966 5028
* notice: next accum: outdated-unq outdated-all / unq all: 951 4973 / 967 5029
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-01-17] / [2025-01-31]

2025-01-30T12:40:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13052546972 # 790
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-30
* notice: last 14d: unq all: 18 59
* notice: prev accum: outdated-unq outdated-all / unq all: 947 4945 / 965 5022
* notice: next accum: outdated-unq outdated-all / unq all: 948 4969 / 966 5028
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2025-01-16] / [2025-01-30]

2025-01-30T01:38:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13043962997 # 789