@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-03T01:41:47Z",
-  "count_outdated" : 4998,
-  "uniques_outdated" : 955,
+  "timestamp" : "2025-02-04T01:40:58Z",
+  "count_outdated" : 4999,
+  "uniques_outdated" : 956,
   "count" : 5029,
   "uniques" : 967,
   "views" : [
-    {
-      "timestamp": "2025-01-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-23T00:00:00Z",
       "count": 2,
