@@ -1,12 +1,7 @@
 {
-  "count": 31,
-  "uniques": 12,
+  "count": 30,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2025-01-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-01-23T00:00:00Z",
       "count": 2,
